[package]
name = "hotwing_contract"  # Replace this with your program name
version = "0.1.0"
edition = "2021"

[features] 
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] 
anchor-debug = [] 
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "lib"]

[build]
rustflags = ["-Clinker=lld"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }     # Anchor framework core library 
anchor-spl = "0.30.1"      # Anchor framework SPL (Solana Program Library) integration 
solana-program = "=1.18.26"
spl-token = "=3.5.0"
spl-token-2022 = "=3.0.5"
