[package]
name = "hotwings"  # Replace this with your program name
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[features] 
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] 
anchor-debug = [] 
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "lib"]
name = "hotwings"  # Replace this with your program name

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
spl-token = { version = "=3.5.0", default-features = false , features = ["no-entrypoint"] }
spl-token-2022 = { version = "=3.0.5", default-features = false }
spl-associated-token-account = { version = "=2.3.0", features = ["no-entrypoint"] }
borsh = "=0.9.3"

