[package]
name = "hotwings"  # Replace this with your program name
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[features] 
no-entrypoint = [] 
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = [] 
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "lib"]
name = "hotwings"  # Replace this with your program name

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "=6.0.0", default-features = false, features = ["no-entrypoint"] }
solana-program = "1.18.26"  # Align all dependencies to this version
solana-zk-token-sdk = "1.18.11"  # Ensure this is compatible with solana-program
spl-token-2022 = { version = "3.0.4", default-features = false }
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
borsh = "=0.9.3"