[package]
name = "hotwings"  # Replace this with your program name
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[features]  
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = []
custom-heap = []
custom-panic = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "lib"]
name = "hotwings"  # Replace this with your program name

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "=4.0.3", default-features = false, features = ["no-entrypoint"] }
solana-program = "1.18.26"   
solana-zk-token-sdk = "1.18.11"   
spl-token-2022 = { version = "3.0.4", default-features = false }
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
borsh = "=0.9.3"
